==> WeActStudio/WeActStudio.EpaperModule/Example/EpaperModuleTest_GD32F103/Epaper/epaper.c <==
#include "epaper.h"
#include "epdfont.h"
#include "systick.h"

void epd_res_set()
{
  gpio_bit_write(GPIOA, GPIO_PIN_8, SET);
}

void epd_dc_set()
{
  gpio_bit_write(GPIOB, GPIO_PIN_14, SET);
}

void epd_cs_set()
{
  gpio_bit_write(GPIOB, GPIO_PIN_12, SET);
}

uint8_t epd_is_busy()
{
  return gpio_input_bit_get(GPIOA, GPIO_PIN_15) == RESET ? 0 : 1;
}

void epd_io_init(void)
{
  rcu_periph_clock_enable(RCU_GPIOA);
  rcu_periph_clock_enable(RCU_GPIOB);
  rcu_periph_clock_enable(RCU_AF);

  spi_parameter_struct spi_init_struct;

  /* configure the epaper module res pin */
  gpio_init(GPIOA, GPIO_MODE_OUT_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_8);

  /* configure the epaper module busy pin */
  gpio_init(GPIOA, GPIO_MODE_IPU, GPIO_OSPEED_50MHZ, GPIO_PIN_15);

  /* configure the epaper module d/c pin */
  gpio_init(GPIOB, GPIO_MODE_OUT_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_14);

  /* configure the epaper module SPI1 sck mosi pin */
  gpio_init(GPIOB, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_13 | GPIO_PIN_15);

  /* configure the epaper module cs pin */
  gpio_init(GPIOB, GPIO_MODE_OUT_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_12);

  /* configure SPI1 */
  rcu_periph_clock_enable(RCU_SPI1);

  /* deinitilize SPI and the parameters */
  spi_i2s_deinit(SPI1);
  spi_struct_para_init(&spi_init_struct);

  spi_init_struct.trans_mode = SPI_TRANSMODE_BDTRANSMIT;
  spi_init_struct.device_mode = SPI_MASTER;
  spi_init_struct.frame_size = SPI_FRAMESIZE_8BIT;
  spi_init_struct.clock_polarity_phase = SPI_CK_PL_HIGH_PH_2EDGE;
  spi_init_struct.nss = SPI_NSS_SOFT;
  spi_init_struct.prescale = SPI_PSC_16;
  spi_init_struct.endian = SPI_ENDIAN_MSB;
  spi_init(SPI1, &spi_init_struct);

  spi_enable(SPI1);
}

void epd_write_reg(uint8_t reg)
{
  epd_dc_reset();
  epd_cs_reset();

  spi_i2s_data_transmit(SPI1, reg);
  while (spi_i2s_flag_get(SPI1, SPI_FLAG_TBE) == RESET)
    ;
  while (spi_i2s_flag_get(SPI1, SPI_FLAG_TRANS) != RESET)
    ;

  epd_cs_set();
  epd_dc_set();
}

void epd_write_data(uint8_t data)
{
  epd_cs_reset();

  spi_i2s_data_transmit(SPI1, data);
  while (spi_i2s_flag_get(SPI1, SPI_FLAG_TBE) == RESET)
    ;
  while (spi_i2s_flag_get(SPI1, SPI_FLAG_TRANS) != RESET)
    ;

  epd_cs_set();
}

void _epd_write_data(uint8_t data)
{
  while (spi_i2s_flag_get(SPI1, SPI_FLAG_TBE) == RESET)
    ;
  spi_i2s_data_transmit(SPI1, data);
}

void _epd_write_data_over()
{
  while (spi_i2s_flag_get(SPI1, SPI_FLAG_TRANS) != RESET)
    ;
}

void epd_writedata(uint8_t *Image1, uint32_t length)
{
  epd_cs_reset();
  for (uint32_t j = 0; j < length; j++)
  {
    _epd_write_data(Image1[j]);
  }
  _epd_write_data_over();
  epd_cs_set();
}
